# bluetooth-com-retry-assistant

./: .gitignore  README.md  bluetooth_assistant_launcher.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  pages.yml  release.yml
bluetooth_assistant/: __init__.py  app.py  com_candidate.py  com_ports.py  diagnostics.py  mock_backend.py  models.py  profile_candidate.py  retry.py  windows_bluetooth.py
docs/: com_scope_qa_coverage_2026-06-20.md  esp32_buying_guide.md  esp32_hardware_test_checklist.md  esp32_profile_simulation.md  esp32_validation_2026-06-20.md  esp32_validation_2026-06-20_upload.md  research_oss_improvements.md  virtual_com_mock.md  windows_visible_mock.md
hardware/esp32_ble_dfu_mock/: esp32_ble_dfu_mock.ino
hardware/esp32_classic_dfu_hint_mock/: esp32_classic_dfu_hint_mock.ino
hardware/esp32_no_com_mock/: esp32_no_com_mock.ino
hardware/esp32_spp_mock/: esp32_spp_mock.ino
scripts/: build_exe.ps1  check_virtual_com.ps1  compile_esp32_sketches.ps1  run_esp32_hardware_check.ps1  run_esp32_pairing_test.ps1  run_esp32_sequence_test.ps1  setup_esp32_arduino_cli.ps1  upload_esp32_sketches.ps1  watch_com_delta.ps1
site/: index.html  styles.css
tests/: test_app_helpers.py  test_com_candidate.py  test_com_ports.py  test_diagnostics.py  test_hardware_sketches.py  test_mock_backend.py  test_models.py  test_profile_candidate.py  test_retry.py  test_version.py  test_windows_bluetooth.py
