[project]
name = "bluetooth-assistant"
version = "0.12.6"
description = "Windows Bluetooth pairing retry assistant for SPP COM port discovery."
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pycodestyle]
max-line-length = 120
